--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     sample application
   </h2>
 
-  <%= link_to "Push app","#",class: "btn btn-large btn-primary" %>
+  <%= link_to "Push app",pushapp_path,class: "btn btn-large btn-primary" %>
   <%= link_to "show apps","#",class: "btn btn-large btn-primary" %>
   <%= link_to "show services","#",class: "btn btn-large btn-primary" %>
 </div>
