对显示app的页面修改，改为注册过和非注册过

--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,1 +1,16 @@
-<%= @app.name %>
+
+<% provide(:title,@app.name) %>
+
+<div class="row">
+  <aside class="span4">
+    <section>
+      <h1>
+        <%= @app.name %>
+      </h1>
+    </section>
+  </aside>
+  <div class="span8">
+
+  </div>
+
+</div>
