--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -9,31 +9,12 @@
     </section>
   </aside>
   <div class="span8">
+    <% unless @register_apps.empty? %>
+      <%= render 'shared/register_apps' %>
+    <% end %>
     <% unless @apps.empty? %>
-      <h3>Apps (<%= @apps.count %>)</h3>
-      <% @apps.each do |app| %>
-        <ol class="microposts">
-          <li>
-            <span><%=app[:name]%> </span>
-            <span >
-              <% if app[:status]=="running" %>
-                <font color="green">running</font>
-              <%elsif app[:status]=="stop"%>
-                <font color="red">stop</font>
-              <%else%>
-                <font color="#EA7500"><%=app[:status]%></font>
-              <%end%>
-            </span>
-            <br/>
-            <span class="timestamp">
-              usage: <%=app[:memory]%>*<%=app[:instances]%>
-            </span>
-            <div class="timestamp">
-              urls: <a href="http://<%=app[:urls]%>"><%=app[:urls]%></a>
-            <div>
-          </li>
-        </ol>
-      <% end %>
+      <%= render 'shared/none_register_apps' %>
     <% end %>
   </div>
+
 </div>
