--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title,'Home') %>
 
 <div class ="center hero-unit">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to the Apps</h1>
   <h2>
-    This is the home page for the <a href="#">Sample App</a>
+    This is the home page for the <a href="#">App</a>
     sample application
   </h2>
 
