增加单独显示每个service方法的页面

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -10,10 +10,10 @@
   </aside>
   <div class="span8">
     <% unless @register_apps.empty? %>
-      <%= render 'shared/register_apps' %>
+      <%= render 'register_apps' %>
     <% end %>
     <% unless @apps.empty? %>
-      <%= render 'shared/none_register_apps' %>
+      <%= render 'none_register_apps' %>
     <% end %>
   </div>
 
